# ONDES_BOT

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: prompts.py  settings.py
core/: claude_client.py  conversation.py  memory.py  token_tracker.py  tool_registry.py
data/: gmail_config.json  nietz.db  telegram_config.json
integrations/apple_calendar/: client.py
integrations/apple_music/: client.py
integrations/docker/: client.py
integrations/github/: client.py
integrations/gmail/: auth.py  client.py  reply_generator.py  setup.py
integrations/telegram/: client.py  setup.py
integrations/web/: scraper.py  search.py
modules/: automation.py  code_reviewer.py  code_runner.py  file_manager.py  image_processor.py  task_manager.py
tests/: test_calendar.py  test_code_runner.py  test_gmail.py  test_memory.py
ui/: chat.py  confirmations.py  dashboard.py  panels.py  themes.py
